--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -129,12 +129,8 @@ blockquote p {
     border-radius: 0;
 }
 
-/* To style active nav link */
-.nav-link.active {
-    color: var(--bs-primary) !important;
-}
-
 /* To style active nav icon */
-.nav-link.active ion-icon {
-    color: var(--bs-primary);
+.nav-link.active,
+.nav-link.active * {
+    color: var(--bs-primary) !important;
 }
