Moved frontend input validators/formatters to "AllInput"

--- a/src/views/components/scripts.pug
+++ b/src/views/components/scripts.pug
@@ -3,4 +3,4 @@ script(src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstr
 script(src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js')
 script(src='/scripts/index.js')
 script.
-    initializePassiveValidator()
+    AllInput.initializePassiveValidator()
