--- a/src/views/components/head.pug
+++ b/src/views/components/head.pug
@@ -4,3 +4,4 @@ title Hello World
 
 link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' integrity='sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I' crossorigin='anonymous')
 link(rel='stylesheet' href='/stylesheets/style.css')
+link(rel='stylesheet' href='/vendor/dropzone/dropzone.min.css')
