--- a/src/public/stylesheets/resumes/budgie-blue.css
+++ b/src/public/stylesheets/resumes/budgie-blue.css
@@ -93,7 +93,7 @@ h3 {
     font-size: 10pt;
     font-weight: 500;
     text-transform: uppercase;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 p {
@@ -115,6 +115,20 @@ p {
 
 .text-dark-blue {
     color: var(--dark-blue)
+}
+
+#left-col {
+    width: 33%;
+    height: 100%;
+    float: left;
+    padding: 0.25in;
+    box-sizing: border-box;
+    text-align: center;
+    color: white;
+}
+
+#left-col h3 {
+    color: white;
 }
 
 #white-box {
@@ -139,9 +153,20 @@ h2 {
 }
 
 .blue-bar {
-    height: 2.5pt;
+    height: 1px;
     width: 0.5in;
     background: var(--blue);
+}
+
+.white-bar {
+    height: 1px;
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 35%;
+    box-sizing: border-box;
+    background: white;
+    margin-top: 5pt;
+    margin-bottom: 10pt;
 }
 
 h3 small {
@@ -149,4 +174,22 @@ h3 small {
     font-size: inherit;
     color: gray;
     float: right;
+}
+
+#profile-photo {
+    border-radius: 50%;
+    background: white;
+    width: 75%;
+}
+
+#contact-section {
+    margin-top: 0.5in;
+}
+
+.contact-info {
+    margin-bottom: 0.25in;
+}
+
+.resume-section {
+    margin-bottom: 0.25in;
 }
