--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -13,14 +13,14 @@ html(lang='en-US')
             .row
                 .col-12.col-md-4.col-lg-3
                     .card
+                        img.card-img-top.border-bottom(src='/images/theme-thumbs/budgie-blue.png')
                         .card-body
                             h5.card-title Budgie Blue
                             p
                                 | Budgie Blue is a soft blue theme which
                                 | maintains professionalism while introducing
                                 | minimal style.
-                            a.btn.badge.bg-primary.rounded-pill Buy
-                            a.btn.badge.bg-secondary.rounded-pill.ml-2(href='themes/preview?theme=budgie-blue') Preview
+                            a.btn.badge.bg-primary.rounded-pill Preview
                             
         include components/footer
         include components/scripts
