--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -20,7 +20,16 @@ html(lang='en-US')
                                 | Budgie Blue is a soft blue theme which
                                 | maintains professionalism while introducing
                                 | minimal style.
-                            a.btn.badge.bg-primary.rounded-pill Preview
+                            a.btn.badge.bg-primary.rounded-pill(href='/app/themes/preview?theme=budgie-blue') Preview
+                .col-12.col-md-4.col-lg-3
+                    .card
+                        img.card-img-top.border-bottom(src='/images/theme-thumbs/budgie-blue.png')
+                        .card-body
+                            h5.card-title Lux
+                            p
+                                | Lux is a clean &amp; simple theme, providing
+                                | a touch of class to a boring resume.
+                            a.btn.badge.bg-primary.rounded-pill(href='/app/themes/preview?theme=lux') Preview
                             
         include components/footer
         include components/scripts
