--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -24,7 +24,7 @@ mixin overview-card(account)
                 .col-10.col-md-8.col-lg-6
                     .row
                         .col-12.text-center
-                            img#profile-icon.rounded-pill(src='/app/account/my-photo' style='height: 2em; width: 2em;')
+                            img#profile-icon.rounded-pill(src='/app/account/my-photo')
                     .row
                         .col-12
                             h4.card-title.text-center.mt-2= `${account.fname} ${account.lname}`
