--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -99,10 +99,11 @@ blockquote p {
 .fade {
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .modal-content {
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .card {
