--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -80,33 +80,29 @@ html(lang='en-US')
                     .col-12
                         h5 Overall Stregth
                             +strength-indicator-dot(analysis.strength.overall)
-                        .progress.mb-4
-                            .progress-bar.bg-primary.text-right.pr-1(style=`width:${analysis.strength.overall}%`)
+                        .progress.mb-4.bg-dark
+                            .progress-bar.progress-bar-striped.bg-secondary.text-right.pr-1(style=`width:${analysis.strength.overall}%`)
                                 = `${Math.floor(analysis.strength.overall)}%`
                 .row
                     .col-12.col-md-6.col-lg-3
                         h5 Education
-                            +strength-indicator-dot(analysis.strength.education)
-                        .progress.mb-4
-                            .progress-bar.bg-primary.text-right.pr-1(style=`width:${analysis.strength.education}%`)
+                        .progress.mb-4.bg-dark
+                            .progress-bar.progress-bar-striped.bg-secondary.text-right.pr-1(style=`width:${analysis.strength.education}%`)
                                 = `${Math.floor(analysis.strength.education)}%`
                     .col-12.col-md-6.col-lg-3
                         h5 Work Experience
-                            +strength-indicator-dot(analysis.strength.work)
-                        .progress.mb-4
-                            .progress-bar.bg-primary.text-right.pr-1(style=`width:${analysis.strength.work}%`)
+                        .progress.mb-4.bg-dark
+                            .progress-bar.progress-bar-striped.bg-secondary.text-right.pr-1(style=`width:${analysis.strength.work}%`)
                                 = `${Math.floor(analysis.strength.work)}%`
                     .col-12.col-md-6.col-lg-3
                         h5 Skills
-                            +strength-indicator-dot(analysis.strength.skills)
-                        .progress.mb-4
-                            .progress-bar.bg-primary.text-right.pr-1(style=`width:${analysis.strength.skills}%`)
+                        .progress.mb-4.bg-dark
+                            .progress-bar.progress-bar-striped.bg-secondary.text-right.pr-1(style=`width:${analysis.strength.skills}%`)
                                 = `${Math.floor(analysis.strength.skills)}%`
                     .col-12.col-md-6.col-lg-3
                         h5 Certifications
-                            +strength-indicator-dot(analysis.strength.certifications)
-                        .progress.mb-4
-                            .progress-bar.bg-primary.text-right.pr-1(style=`width:${analysis.strength.certifications}%`)
+                        .progress.mb-4.bg-dark
+                            .progress-bar.progress-bar-striped.bg-secondary.text-right.pr-1(style=`width:${analysis.strength.certifications}%`)
                                 = `${Math.floor(analysis.strength.certifications)}%`
                 if analysis.requirements.length > 0
                     br
