Changed the nav flag from "Alpha" to "Beta"

--- a/src/views/components/navbar.pug
+++ b/src/views/components/navbar.pug
@@ -9,7 +9,7 @@ nav.navbar.navbar-expand-lg.navbar-light
                 loading='lazy')
             | &nbsp; Resumator
             sup
-                sup.ml-1.bg-primary.text-light.badge Alpha
+                sup.ml-1.bg-primary.text-light.badge Beta
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsing-navbar')
             span.navbar-toggler-icon
         #collapsing-navbar.collapse.navbar-collapse.ml-lg-4
