Fixed `NaN%` issue with certifications progressbar

--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -105,7 +105,7 @@ html(lang='en-US')
                         +strength-progress-fill(analysis.strength.skills)
                     .col-12.col-md-6.col-lg-3
                         h5 Certifications
-                        +strength-progress-fill(analysis.strength.certification)
+                        +strength-progress-fill(analysis.strength.certifications)
                 if analysis.requirements.length > 0
                     br
                     h5 Requirements
