--- a/src/views/resume-templates/budgie-blue.pug
+++ b/src/views/resume-templates/budgie-blue.pug
@@ -6,19 +6,35 @@ mixin section-title(label)
     br
 
 mixin work-experience(experience)
-    h3= `${experience.position} // ${experience.organization}`
+    h3= experience.organization
         small= `${experience.start} - ${experience.end}`
-    p= experience.description
+    p(style='font-weight:600;')= experience.position
+    if experience.description.indexOf("\n") > 0
+        for line in experience.description.split("\n")
+            p.description-line= line
+    else
+        p= experience.description
+    br
 
 mixin education(edu)
     h3= edu.institution
-        small= `${edu.end.split("/")[2]}`
-    p= `${edu.level} // ${edu.degree}`
-    p= edu.description
+        if edu.end
+            small= `${edu.end.split("/")[1]}`
+        else
+            small= `${edu.start.split("/")[1]} - Present`
+    p(style='font-weight:600;')= `${edu.level} // ${edu.degree}`
+    if edu.description.indexOf("\n") > 0
+        for line in edu.description.split("\n")
+            p.description-line= line
+    else
+        p= edu.description
+    br
 
 mixin certification(cert)
-    h3= cert.name
-        small= ` at ${cert.institution}`
+    h3= `${cert.certification} at `
+        em(style='color:var(--dark-blue)')= cert.institution
+        small= cert.examDate
+    br
 
 
 html(lang='en-US')
@@ -35,8 +51,8 @@ html(lang='en-US')
             h1 {
                 text-align: center;
                 font-size: 36pt;
-                color: var(--blue);
-                font-weight: lighter;
+                color: var(--light-blue);
+                font-weight: bold;
                 margin: 0;
             }
 
@@ -84,7 +100,7 @@ html(lang='en-US')
             h3 {
                 color: black;
                 font-size: 10pt;
-                font-weight: 500;
+                font-weight: bold;
                 text-transform: uppercase;
                 margin: 0;
             }
@@ -138,17 +154,17 @@ html(lang='en-US')
             }
 
             h2 {
-                color: var(--blue);
+                color: var(--light-blue);
                 margin-bottom: 1pt;
-                font-weight: 400;
+                font-weight: bold;
                 font-size: 12pt;
                 text-transform: uppercase;
             }
 
             .blue-bar {
-                height: 1px;
+                height: 0.05in;
                 width: 0.5in;
-                background: var(--blue);
+                background: var(--light-blue);
             }
 
             .white-bar {
@@ -183,8 +199,8 @@ html(lang='en-US')
                 margin-bottom: 0.25in;
             }
 
-            .resume-section {
-                margin-bottom: 0.25in;
+            .description-line:before {
+                content: "—";
             }
     body
         .page
@@ -192,6 +208,11 @@ html(lang='en-US')
                 img#profile-photo(src='/app/account/my-photo')
 
                 #contact-section
+                    if account.objective && account.objective.length > 0
+                        .contact-info
+                            h3 Objective
+                            .white-bar
+                            p(style='text-align:justify;text-justify:inner-word')= account.objective
                     if account.phone
                         .contact-info
                             h3 Phone
@@ -207,7 +228,7 @@ html(lang='en-US')
                             h3 Address
                             .white-bar
                             p
-                                if account.addres.line1
+                                if account.address.line1
                                     = account.address.line1
                                     br
                                 if account.address.line2
@@ -219,8 +240,6 @@ html(lang='en-US')
                 h1= `${account.fname} ${account.lname}`
                 #main-section
                     .resume-section
-                        +section-title('Objective')
-                        p Your objective will appear here
                         if workExperience.length > 0
                             +section-title('Work Experience')
                             each experience in workExperience
