--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -43,7 +43,7 @@ mixin overview-card(account)
                     .row#change-profile-pic-wrapper(hidden)
                         .col-12
                             h5 Change Profile Image
-                            div#profile-pic-dropzone.w-100.p-4.bg-light
+                            div#profile-pic-dropzone.w-100.p-4.bg-white
                                 h4 Drag image to upload
                                 p or click here to browse
                 .col
