--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -82,6 +82,10 @@ blockquote p {
     box-sizing: content-box;
 }
 
+.preview-theme-card:hover {
+    cursor: url("cursors/PreviewTheme.png"), auto;
+}
+
 /***************************************************
 ************** BOOTSTRAP OVERRIDES *****************
 ***************************************************/
@@ -127,7 +131,7 @@ blockquote p {
     background: rgba(255, 255, 255, 0);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(10px);
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); */
 }
 
 .list-group {
