--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -11,25 +11,23 @@ html(lang='en-US')
 
         .container.mt-4
             .row
-                .col-12.col-md-4.col-lg-3
-                    .card
-                        img.card-img-top.border-bottom(src='/images/theme-thumbs/budgie-blue.png')
+                .col-12.col-md-6.col-lg-3.mb-4
+                    .card.preview-theme-card.p-4(style='height:100%' onclick='window.location=`/app/themes/preview?theme=budgie-blue`')
+                        img.card-img-top(src='/images/theme-thumbs/BudgieBluePreview.png')
                         .card-body
-                            h5.card-title Budgie Blue
-                            p
-                                | Budgie Blue is a soft blue theme which
-                                | maintains professionalism while introducing
-                                | minimal style.
-                            a.btn.badge.bg-primary.rounded-pill(href='/app/themes/preview?theme=budgie-blue') Preview
-                .col-12.col-md-4.col-lg-3
-                    .card
-                        img.card-img-top.border-bottom(src='/images/theme-thumbs/budgie-blue.png')
+                            h5.card-title.text-center Budgie Blue
+                            hr
+                            p(style='text-align:justify;text-justify:inter-character')
+                                | White on light blue. Black on white. Bold headingss. 
+                .col-12.col-md-6.col-lg-3.mb-4
+                    .card.preview-theme-card.p-4(style='height:100%')
+                        img.card-img-top(src='/images/theme-thumbs/LuxPreview.png')
                         .card-body
-                            h5.card-title Lux
-                            p
+                            h5.card-title.text-center Lux
+                            hr
+                            p(style='text-align:justify;text-justify:inter-character')
                                 | Lux is a clean &amp; simple theme, providing
                                 | a touch of class to a boring resume.
-                            a.btn.badge.bg-primary.rounded-pill(href='/app/themes/preview?theme=lux') Preview
                             
         include components/footer
         include components/scripts
