--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -128,7 +128,7 @@ blockquote p {
     position: sticky;
     z-index: 100;
     top: 0;
-    background: rgba(255, 255, 255, 0);
+    background: linear-gradient(to top, rgba(255, 255, 255, 0), white);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(10px);
     /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); */
